# vyos-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yml
src/vyos_mcp/: __init__.py  __main__.py  client.py  docs.py  server.py
src/vyos_mcp/tools/: config.py  operational.py  system.py
tests/: test_client.py  test_docs.py  test_server.py
